# PyLIT

./: .gitignore  CITATION.cff  LICENSE.txt  PyLIT.bib  README.md  app_setup.sh  app_start.sh  conf.py  core.html  environment.yml  experiment.html  genindex.html  get-started.html  index.html  installation.html  methods.html  models.html  modules.html  njit_utils.html  objects.inv  optimizer.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test.py  utils.html
_sources/: core.rst.txt  get-started.rst.txt  index.rst.txt  installation.rst.txt  methods.rst.txt  models.rst.txt  optimizer.rst.txt
_sources/core/: data_classes.rst.txt  decorators.rst.txt  detailed_balance.rst.txt
_sources/get-started/: beginner.rst.txt
_sources/methods/: cdf_l2_fit.rst.txt  l1_reg.rst.txt  l2_reg.rst.txt  tv_reg.rst.txt
_sources/models/: gauss.rst.txt  laplace.rst.txt  uniform.rst.txt
_sources/optimizer/: adaptive.rst.txt
core/: data_classes.html  decorators.html  detailed_balance.html  linear_scaling.html  selection.html
core/data_classes/: configuration.html  method.html  preparation.html  result.html  solution.html
docs/source/: conf.py  core.rst  experiment.rst  get-started.rst  index.rst  installation.rst  methods.rst  models.rst  modules.rst  njit_utils.rst  optimizer.rst  utils.rst
examples/: README.md
examples/ESA synthetic data/: plot_noise_convergence.py  run_sample_usage_files.sh  sample_usage_Bayesian.py  sample_usage_chi2kink.py
examples/beginner/: run.py
get-started/: advanced.html  beginner.html
installation/: anaconda.html  development.html  poetry.html
methods/: cdf_l2_fit.html  l1_reg.html  l2_fit.html  l2_reg.html  max_entropy_fit.html  tv_reg.html  var_reg.html
models/: cauchy.html  gauss.html  laplace.html  lrm.html  uniform.html
optimizer/: adam.html  adaptive.html  nesterov.html  nnls.html
src/pylit/: __init__.py  data_loader.py  experiment.py  global_settings.py  itransform.py  njit_utils.py  (+5 more)
tests/: test_data_loader.py  test_gauss_rlrm.py  test_utils.py
(+299 files in other folders)
