[tool.poetry]
name = "pylit"
version = "0.1.0"
description = "This software provides a Python implementation of the inverse Laplace transformation."
authors = ["Phil-Alexander Hofmann", "Alexander Benedix Robles"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "pylit", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pip = "^24.2"
numpy = "2.0.2"
numba = "^0.60.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
streamlit = "^1.38.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
pandoc = "^2.4"
pdoc = "^14.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
