[project]
name = "pylit"
version = "0.1.0"
description = ""
authors = [
    {name = "philippocalippo",email = "philhofmann@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=1.22,<2.1)",
    "numba (>=0.60.0,<0.61.0)",
    "scipy (>=1.15.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
furo = "^2025.7.19"
sphinx-autodoc-typehints = "^3.2.0"
deptry = "^0.23.1"
black = ">=25.9.0,<26.0.0"

